syntax = "proto3";

package go.jebb.api;

message SignupRequest {
    string username = 1;
}

message SignupResponse {
    string username  = 1;
    string password = 2;
    string id = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse { bool logged_in = 1; }

service AuthService { 
    rpc Signup(SignupRequest) returns (SignupResponse) {} 
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

